SIM_TRACE/build/MAKE_err
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c: In function ‘robot_integ’:
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:24:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   24 |         &B->accel[0],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:25:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   25 |         &B->accel[1],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:32:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   32 |         &B->accel[0],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:33:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   33 |         &B->accel[1],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:44:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   44 |         &B->accel[0],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/trick_sims/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:45:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   45 |         &B->accel[1],
      |             ^~~~~
      |             acc
